welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: type mismatch;
 found   : String("R")
 required: Unit
	case "R" => droite() ; avance()
             ^BDR2:4: error: type mismatch;
 found   : String("L")
 required: Unit
	case "L" => gauche() ; avance()
             ^BDR2:5: error: type mismatch;
 found   : String("I")
 required: Unit
	case "I" =>
             ^BDR2:6: error: type mismatch;
 found   : String("A")
 required: Unit
	case "A" =>
             ^BDR2:7: error: type mismatch;
 found   : String("B")
 required: Unit
	case "B" =>
             ^BDR2:8: error: type mismatch;
 found   : String("C")
 required: Unit
	case "C" =>
             ^BDR2:9: error: type mismatch;
 found   : String("D")
 required: Unit
	case "D" =>
             ^BDR2:10: error: type mismatch;
 found   : String("E")
 required: Unit
	case "E" =>
             ^BDR2:11: error: type mismatch;
 found   : String("F")
 required: Unit
	case "F" =>
             ^BDR2:12: error: type mismatch;
 found   : String("Z")
 required: Unit
	case "Z" =>
             ^BDR2:13: error: type mismatch;
 found   : String("Y")
 required: Unit
	case "Y" =>
             ^BDR2:14: error: type mismatch;
 found   : String("X")
 required: Unit
	case "X" =>
             ^BDR2:15: error: type mismatch;
 found   : String("W")
 required: Unit
	case "W" =>
             ^BDR2:16: error: type mismatch;
 found   : String("V")
 required: Unit
	case "V" =>
             ^BDR2:17: error: type mismatch;
 found   : String("L")
 required: Unit
	case "L" =>
             ^